--- a/test/src/App.css
+++ b/test/src/App.css
@@ -1,33 +1,77 @@
+body {
+  /* background: url(/img/banner.jpg); */
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .App {
   text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  background-color: rgba(236, 218, 218, 0.75);
+  height: 100vh;
+  color: rgb(24, 29, 87);
+  overflow: hidden;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+/* .App-header {
+  height: 130px;
+  padding: 20px 20px 0 20px;
+} */
+
+.App-header h1 {
+  font-weight: 400;
+  font-size: 46px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App-header h2{
+  font-size: 16px;
+  font-weight: 300;
 }
 
-.App-link {
-  color: #61dafb;
+.Board h4{
+  font-size: 18px;
+  font-weight: 300;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+.Footer {
+  position: fixed;
+  bottom: 0;
+  left: 30px;
+}
+
+.Footer a {
+  text-decoration: none;
+  color: rgb(11, 33, 66);
+}
+
+.Footer h3 {
+  font-weight: 300;
+}
+
+@media screen and (max-width: 1340px) {
+  img.profile-pic {
+    height: 140px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 860px) {
+  img.profile-pic {
+    height: 100px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .App-header {
+    height: 90px;
+  }
+  
+  .App-header h1 {
+    font-size: 30px;
+  }
+
+  .Board h4 {
+    font-size: 14px;
   }
 }
